monitoria/mac323/4-2-35/grades/Victor-Domiciano-Mendonça_191423_assignsubmission_file_CoreVertices.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-35/tester/checker/checker' is up to date.
CoreVertices.java:16: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
DirectedDFS.java:105: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
KosarajuSharirSCC.java:176: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
Note: KosarajuSharirSCC.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
=========== TENTANDO COMPILAR DE NOVO (imports no começo do código) ==============
CoreVertices.java:17: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
DirectedDFS.java:106: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
KosarajuSharirSCC.java:177: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
Note: KosarajuSharirSCC.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
